--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Basic Three.js App</title>
+<head>
+    <title>DEMO Three.js</title>
     <style>
-      html, body { margin: 0; padding: 0; overflow: hidden; }
+    html,
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
     </style>
-  </head>
-  <body>
-    <script src="lib/three.min.js"></script>
-    <script src="lib/orbitControl.js"></script>
-    <script src="app.js"></script>
-  </body>
+</head>
+<body>
+    <script type="text/javascript" src="_app.js" charset="utf-8"></script>
+</body>
 </html>
