--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <div id="app"></div>
     <script type="text/javascript" src="_app.js" charset="utf-8"></script>
 </body>
 </html>
