--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html>
 <head>
     <title>DEMO Three.js</title>
-    <style>
-    html,
-    body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-    }
-    </style>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <div id="view"></div>
+        <div id="panel"></div>
+    </div>
     <script type="text/javascript" src="_app.js" charset="utf-8"></script>
 </body>
 </html>
